--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2022",
     "module": "CommonJS",
-    "lib": ["ES2020"],
+    "lib": ["ES2022"],
     "rootDir": "./",
     "outDir": "./dist",
     "moduleResolution": "node",
@@ -11,7 +11,9 @@
     "strict": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "noEmit": false
+    "noEmit": false,
+    "types": ["node"],
+    "resolveJsonModule": true
   },
-  "include": ["server.ts", "src/**/*"]
+  "include": ["server.ts", "src/**/*", "scripts/**/*"]
 }
