--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "pdfjs-dist": "^5.4.54",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
